# WhatsApp-Twin

./: .env.example  .gitignore  CLAUDE.md  README.md  SPIKE_RESULTS.md  blog.md  pyproject.toml  spike.py
.claude/commands/: grade-review.md
docs/superpowers/plans/: 2026-03-19-real-time-learning.md
src/whatsapp_twin/: cli.py  main.py
src/whatsapp_twin/app/: hotkey.py  menubar.py  permissions.py
src/whatsapp_twin/config/: logging.py  settings.py
src/whatsapp_twin/generator/: claude_client.py  draft_manager.py  prompt_builder.py
src/whatsapp_twin/ingestion/: contact_profiler.py  export_parser.py  style_analyzer.py
src/whatsapp_twin/intelligence/: context_builder.py  memory.py  style_profile.py
src/whatsapp_twin/learning/: edit_tracker.py  live_learner.py  style_updater.py
src/whatsapp_twin/output/: typer.py
src/whatsapp_twin/reader/: accessibility.py  ocr_fallback.py
src/whatsapp_twin/storage/: database.py  models.py
tests/: test_database.py  test_draft_manager.py  test_edit_learning.py  test_export_parser.py  test_group_chat.py  test_live_learner.py  test_style_analyzer.py
tests/fixtures/: sample_chat.txt
